--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1,3 +1,52 @@
-body {
-    background: #000;
-}
+@charset "UTF-8";
+
+// 1. Configuration and helpers
+@import
+  'utils/functions',
+  'utils/mixins',
+  'utils/variables';
+
+// 2. Vendors
+@import
+  'vendors/normalize';
+
+// 3. Base stuff
+@import
+  'base/typography';
+
+// 4. Layout-related sections
+
+@import
+  'layouts/forms',
+  'layouts/header',
+  'layouts/navigation',
+  'layouts/section';
+
+// 5. Components
+@import
+  'components/butons',
+  'components/icones',
+  'components/inputs';
+
+// 6. Page-specific styles
+@import
+  'pages/contact',
+  'pages/home';
+
+// 7. Themes
+@import
+  'themes/default';
+
+
+
+
+
+
+
+
+  
+  
+  
+  
+  
+ 
