--- a/Sass/components/_inputs.scss
+++ b/Sass/components/_inputs.scss
@@ -1,11 +1,12 @@
-::placeholder,
-  input,
-  .searchbutton,
-  .filtered-title,
-  .afficher-txt {
-    font-size: 18px;
-  }
+
+ 
 
   input {
     border: none;
+    justify-content: center;
+    background-color:#EAEAEA;
+    
+    
+    
+    
   }
