--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -7,9 +7,55 @@
   :root {
     --main-color: #9356DC;
     --main-bg-color: #f2f2f2;
-    --filter-bg-color: #deebff;
+    
+
   }
   
   .fa-solid {
     color: var(--main-color);
   }
+
+ 
+
+  .section-title {
+    width: 70%;
+    font-size: 2em;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 42px;
+    line-height: 28.13px;   
+  }
+
+  .section-title2, .section-title3 {   
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  .main-container {
+    width: 100%;
+    max-width: 768.98px;   
+    box-sizing: border-box;
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  a {
+    color: black;
+    text-decoration: none;
+  }
+
+  
+ 
+  
+ 
+  
+ 
