--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -1,23 +1,41 @@
 ::placeholder {
     color: var(--Black, #000);
-    text-align: center;
+    text-align: left;
     width: 100%;
+    padding-left: 5px;
+    
+    
+    
   }
   
   .searchbutton {
     display: flex;
     align-items: center;
-    border: 1px var(--#9356DC);
-    border-radius: 0px 15px 15px 0px;
-    background: var(--Blue,#9356DC);
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 25px;
+    background:linear-gradient(#FF79DA, #9356DA);
     color: var(--White, #fff);
-    -webkit-border-radius: 0px 15px 15px 0px;
-    -moz-border-radius: 0px 15px 15px 0px;
-    -ms-border-radius: 0px 15px 15px 0px;
-    -o-border-radius: 0px 15px 15px 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+    font-weight: 500;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    box-shadow: 0px 4px 10px 0px #00000040;
+    height: 50px;
+    width: 65%;
+    align-items: center;
+    margin-left: 60px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    border: none;
+    
+
+
+}
   
  
   
