--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -1,7 +1,26 @@
 #logo {
     display: flex;
     text-align: center;
-    padding: 30px 0px;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    padding: 14px 0px;
+    flex-direction:column;
+    align-items:center;
+    width: 50%;
+    padding-left: 79px;      
+  }  
+
+  .sub-title {
+    text-align: center;
+    font-weight: 300;
+    width:95% ;
+    font-size: 16px;
+    padding-left: 10px;
+    line-height: 21px;
+    letter-spacing: 0em;
+    padding-bottom: 10px;
   }
+
+  
+
+  
+
