--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -5,94 +5,123 @@ body {
     position: relative;
   }
   
-  .main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 20px;
-    box-sizing: border-box;
-  }
+ 
 
-  .section-title,
-  .hebergements-title {
-    margin: 0;
-    font-size: 22px;
-    color: #000;
-  }
+  
 
   nav {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    margin-bottom: 35px;
+    align-items: center;
+   
   }
 
-  img {
+  .explorer{
     width: 100%;
-    object-fit: cover;
+    padding-bottom: 30px;
+    background-color: #F2F4F4;
+    padding-top: 20px;
   }
 
-  .hebergements-and-populaires {
-    display: flex;
-    justify-content: space-between;
+  .etape {
+    padding-left : 15px;
+  }
+
+  .fonctionnement {
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
+
+  .menus {
+    background-color:#F2F4F4;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+    padding-bottom: 50px;
+   
   }
   
-  .populaires,
-  .hebergements {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
-    box-sizing: border-box;
-    gap: 40px;
-  }
-  
-  /****** Hebergements ***********/
-  .hebergements {
-    width: 65%;
-  }
-  
-  .hebergements-cards img {
-    display: flex;
-    width: 100%;
-    height: 110px;
+  .carte img {
+    display: flex;       
     justify-content: end;
-    flex-direction: column;
-    border: 20px;
+    flex-direction: column;    
     border-radius: 20px 20px 0px 0px;
     -webkit-border-radius: 20px 20px 0px 0px;
     -moz-border-radius: 20px 20px 0px 0px;
     -ms-border-radius: 20px 20px 0px 0px;
     -o-border-radius: 20px 20px 0px 0px;
     object-fit: cover;
+   
   }
+
   
-  .hebergements-cards {
+
+  
+
+  
+  
+
+  .cartes {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    justify-items: center;
-    align-items: center;
-    gap: 30px;
-    margin-top: 10px;
-    margin-bottom: 4px;
-    margin-top: 30px;
+    flex-direction: column;
+    gap: 18px;
+   
   }
+
   
-  .hebergements-card-content {
-    width: 235.33px;
-    height: 64.25px;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 10px;
+  .carte-txt {
+    padding-left: 10px; 
+    
+    height: 500px;
+   
+   
+    
   }
-  
-  .hebergements-card-subtitle {
-    margin: 5px 0px 5px 0px;
-  }
-  
-  .afficher-txt {
-    display: flex;
-    height: 21px;
+
+
+  .carte-title {
+    
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0em;
     text-align: left;
-    padding-top: 30px;
+    position: relative;
   }
+
+  .carte-subtitle {
+    margin: 0;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    
+  }
+
+  footer {
+    background-color: #353535;
+    font-size: 18px;     
+  }
+
+  b {    
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18.75px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+    
+  }
+  
+  .links {
+    list-style : none;
+   padding-bottom : 10px;
+   width : 100%; 
+   text-align : start;
+   padding-left: 20px; 
+   width: 80%;
+  }
+
+  
   
