--- a/style.css/main.css
+++ b/style.css/main.css
@@ -309,19 +309,87 @@ template {
 :root {
   --main-color: #9356DC;
   --main-bg-color: #f2f2f2;
-  --filter-bg-color: #deebff;
 }
 
-.fa-solid {
+.fa-solid, .fa-thin {
   color: var(--main-color);
+}
+
+.section-title {
+  width: 70%;
+  font-size: 2em;
+  font-weight: 700;
+  text-align: center;
+  padding-left: 42px;
+  line-height: 28.13px;
+}
+
+.section-title2, .section-title3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding-left: 20px;
+}
+
+.main-container {
+  width: 100%;
+  max-width: 768.98px;
+  box-sizing: border-box;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.carte {
+  background-color: white;
+  border-radius: 20px;
+  -webkit-filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  padding-left: 50px;
 }
 
 #logo {
   display: flex;
   text-align: center;
-  padding: 30px 0px;
+  justify-content: center;
+  padding: 14px 0px;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  width: 50%;
+  padding-left: 79px;
+}
+
+.sub-title {
+  text-align: center;
+  font-weight: 300;
+  width: 95%;
+  font-size: 16px;
+  padding-left: 10px;
+  line-height: 21px;
+  letter-spacing: 0em;
+  padding-bottom: 10px;
+}
+
+nav {
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  background-color: #EAEAEA;
 }
 
 body {
@@ -331,15 +399,7 @@ body {
   position: relative;
 }
 
-.main-container {
-  width: 100%;
-  max-width: 1440px;
-  padding: 0 20px;
-  box-sizing: border-box;
-}
-
-.section-title,
-.hebergements-title {
+.section-title {
   margin: 0;
   font-size: 22px;
   color: #000;
@@ -348,41 +408,39 @@ body {
 nav {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  margin-bottom: 35px;
+  align-items: center;
 }
 
-img {
+.explorer {
   width: 100%;
-  object-fit: cover;
+  padding-bottom: 30px;
+  background-color: #F2F4F4;
+  padding-top: 20px;
 }
 
-.hebergements-and-populaires {
-  display: flex;
-  justify-content: space-between;
+.etape {
+  padding-left: 15px;
 }
 
-.populaires,
-.hebergements {
-  background-color: var(--main-bg-color);
-  border-radius: 20px;
-  padding: 30px;
-  box-sizing: border-box;
-  gap: 40px;
+.fonctionnement {
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
-/****** Hebergements ***********/
-.hebergements {
-  width: 65%;
+.menus {
+  background-color: #F2F4F4;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
-.hebergements-cards img {
+.carte img {
   display: flex;
   width: 100%;
-  height: 110px;
+  height: 130px;
   justify-content: end;
   flex-direction: column;
-  border: 20px;
   border-radius: 20px 20px 0px 0px;
   -webkit-border-radius: 20px 20px 0px 0px;
   -moz-border-radius: 20px 20px 0px 0px;
@@ -391,89 +449,194 @@ img {
   object-fit: cover;
 }
 
-.hebergements-cards {
+.image-container {
+  width: 100%;
+}
+
+.image-txt {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.cartes {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: start;
-  justify-items: center;
-  align-items: center;
-  gap: 30px;
-  margin-top: 10px;
-  margin-bottom: 4px;
-  margin-top: 30px;
+  flex-direction: column;
+  gap: 18px;
 }
 
-.hebergements-card-content {
-  width: 235.33px;
-  height: 64.25px;
-  padding-left: 5px;
-  padding-top: 5px;
-  padding-bottom: 10px;
+.carte-txt {
+  padding-left: 10px;
+  position: relative;
 }
 
-.hebergements-card-subtitle {
-  margin: 5px 0px 5px 0px;
-}
-
-.afficher-txt {
-  display: flex;
-  height: 21px;
+.carte-title {
+  margin-bottom: 0;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
   text-align: left;
-  padding-top: 30px;
+  position: relative;
+}
+
+.carte-subtitle {
+  margin: 0;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+footer {
+  background-color: #353535;
+  font-size: 18px;
+}
+
+b {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.75px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #FFFFFF;
+}
+
+.links {
+  list-style: none;
+  padding-bottom: 10px;
+  width: 100%;
+  text-align: start;
+  padding-left: 20px;
+  width: 80%;
 }
 
 ::placeholder {
   color: var(--Black, #000);
-  text-align: center;
+  text-align: left;
   width: 100%;
+  padding-left: 5px;
 }
 
 .searchbutton {
   display: flex;
   align-items: center;
-  border: 1px var(-- #9356DC);
-  border-radius: 0px 15px 15px 0px;
-  background: var(--Blue, #9356DC);
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  background: linear-gradient(#FF79DA, #9356DA);
   color: var(--White, #fff);
-  -webkit-border-radius: 0px 15px 15px 0px;
-  -moz-border-radius: 0px 15px 15px 0px;
-  -ms-border-radius: 0px 15px 15px 0px;
-  -o-border-radius: 0px 15px 15px 0px;
-  padding-left: 20px;
-  padding-right: 20px;
+  font-weight: 500;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  height: 50px;
+  width: 65%;
+  align-items: center;
+  margin-left: 60px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  border: none;
 }
 
 .fa-location-dot {
   display: flex;
-  width: 15%;
-  background-color: var(--grey, #f2f2f2);
+  width: 10%;
   justify-content: center;
   color: black;
   align-items: center;
-  border: 1px #f2f2f2;
-  border-radius: 15px 0px 0px 15px;
-  -webkit-border-radius: 15px 0px 0px 15px;
-  -moz-border-radius: 15px 0px 0px 15px;
-  -ms-border-radius: 15px 0px 0px 15px;
-  -o-border-radius: 15px 0px 0px 15px;
-  padding: 20px;
-  font-size: 18px;
+  padding: 10px;
+  padding-left: 30px;
 }
 
 abbr {
   border: none;
 }
 
-::placeholder,
-input,
-.searchbutton,
-.filtered-title,
-.afficher-txt {
-  font-size: 18px;
+.fa-mobile-screen-button, .fa-list, .fa-store {
+  height: 72.38px;
+  display: flex;
+  text-align: left;
+  padding-left: 30px;
+  align-items: center;
+  border-radius: 20px;
+  color: #7E7E7E;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  width: 78%;
+  margin-left: 20px;
+  background: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+  margin-bottom: 15px;
+  z-index: 1;
+}
+
+.fa-store {
+  color: #9356DC;
+}
+
+.icone-txt {
+  color: black;
+  padding-left: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.ellipse {
+  width: 24px;
+  height: 24px;
+  background-color: #9356DC;
+  color: #FFFFFF;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-left: 10px;
+}
+
+.numero {
+  position: absolute;
+  margin: 2px;
+  padding-left: 5px;
+}
+
+.fa-heart {
+  color: #101010;
+  width: 100%;
+}
+
+.coeur1 {
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 80%;
 }
 
 input {
   border: none;
+  justify-content: center;
+  background-color: #EAEAEA;
 }
 
 /*# sourceMappingURL=main.css.map */
