--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -53,7 +53,15 @@
     text-decoration: none;
   }
 
-  
+  .lapalette {
+    width: 100%;
+  }
+
+.logopages {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
  
   
  
