--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -73,8 +73,16 @@
     padding-left : 5px;    
   }
 
- 
+  .fa-heart {
+    position: absolute;
+    z-index: 1;
+    top: 10%;
+    left: 80%;
+   }
 
+  .fa-left-long {
+    color: black;
+  }
   
   
  
