--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -1,4 +1,4 @@
-#logo {
+  #logo {
     display: flex;
     text-align: center;
     justify-content: center;
@@ -6,8 +6,9 @@
     flex-direction:column;
     align-items:center;
     width: 50%;
-    padding-left: 79px;      
+    padding-left: 79px;         
   }  
+
 
   .sub-title {
     text-align: center;
@@ -20,6 +21,9 @@
     padding-bottom: 10px;
   }
 
+  .footer-logo {
+    color: white;
+  }
   
 
   
