Modifications du footer

--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -10,6 +10,19 @@
     color: rgba(255, 255, 255, 1);
 }
 
+footer {
+    background: rgba(53, 53, 53, 1);
+    padding-top: 10px;
+    font-size: 18px; 
+    position: absolute;
+    z-index: 1; 
+    width: 100%; 
+    height: 200px;
+    bottom: 0;  
+  
+    
+  }
+
 .footer-title {
     color: #f2f2f2;
     background-color: #353535;
