--- a/Sass/main.css
+++ b/Sass/main.css
@@ -374,6 +374,17 @@ a {
   color: rgb(255, 255, 255);
 }
 
+footer {
+  background: rgb(53, 53, 53);
+  padding-top: 10px;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 200px;
+  bottom: 0;
+}
+
 .footer-title {
   color: #f2f2f2;
   background-color: #353535;
@@ -535,12 +546,6 @@ nav {
   text-align: left;
 }
 
-footer {
-  background: rgb(53, 53, 53);
-  padding-top: 10px;
-  font-size: 18px;
-}
-
 b {
   font-size: 16px;
   font-weight: 500;
@@ -567,6 +572,16 @@ b {
   -ms-border-radius: 25px 25px 0px 0px;
   -o-border-radius: 25px 25px 0px 0px;
   padding: 10px;
+  position: relative;
+  top: 170px;
+}
+
+.lapalette, .enchantee {
+  position: absolute;
+}
+
+.enchantee {
+  width: 100%;
 }
 
 .titre_lacarte_coeur {
