Modifications footer restauarants

--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -8,20 +8,29 @@
     text-align: left;
     padding-left: 20px;
     color: rgba(255, 255, 255, 1);
+    margin-top: 0;
 }
 
 footer {
     background: rgba(53, 53, 53, 1);
-    padding-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     font-size: 18px; 
-    position: absolute;
-    z-index: 1; 
-    width: 100%; 
-    height: 200px;
-    bottom: 0;  
-  
-    
+    position: relative;
   }
+
+.footer_restaurants {
+   
+    background: rgba(53, 53, 53, 1);
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-size: 18px; 
+    position: relative;
+    width: 100%;  
+    bottom: 27px; 
+}
+
+
 
 .footer-title {
     color: #f2f2f2;
