--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -145,17 +145,17 @@ body {
     -moz-border-radius:25px 25px 0px 0px ;
     -ms-border-radius:25px 25px 0px 0px ;
     -o-border-radius:25px 25px 0px 0px ;
-    padding: 10px;
+    padding-top: 20px;
+   padding-bottom: 30px;
     position: relative;
-  
-    top: 170px;
-    
-   
-   
+    width: 100%;
+    bottom: 30px;    
+    z-index: 1;   
   }
 
   .lapalette, .enchantee {
-    position: absolute;
+    position: relative;
+    width: 100%; 
   }
 
   .enchantee {
@@ -165,6 +165,7 @@ body {
 
   .titre_lacarte_coeur {
     position: relative;
+    padding-left: 10px;
   }
 
   .titre_lacarte {
@@ -176,11 +177,14 @@ body {
     letter-spacing: 0em;
     text-align: left;
     padding-top: 10px;
-    position: relative;    
+    position: relative;
+    padding: 10px;    
   }
 
   .entrees, .plats, .desserts {
     padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .subtitle_lacarte {
@@ -193,7 +197,8 @@ body {
     border-bottom: 3px solid rgba(153, 226, 208, 1);
     width: 10%;
     height: 23px;
-    padding-top: 10px;   
+    padding-top: 10px; 
+     
   }
 
   .menu {
@@ -209,6 +214,8 @@ body {
     margin-bottom: 20px;
     padding: 15px;
     position: relative;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   .titre_menus {    
