Superposition des coeurs pour remplissage

--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -85,11 +85,13 @@
     color: black;
   }
 
-  .heart-full {
+  .fa-solid {
     opacity: 0;
+    transition-property: all;
+    transition-delay: 2s;
   }
 
-  .heart-full :hover {
+  .fa-solid :hover {
     opacity: 1;
   }
   
