--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -84,18 +84,19 @@
   }
 
   .fa-solid {
-    opacity: 0;
-    transition-property: all;
-    transition-delay: 2s;
+    -webkit-text-stroke-width: 2px;
+  
+  -webkit-text-stroke-color: black;
+    
   }
 
   .fa-solid :hover {
-    opacity: 1;
+    color: #9356DC;
   }
 
   .coeur1{
-    width: 50px;
-    height: 50px;
+    color: white;
+    
   }
   
   
