Supression dossiers sass

--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -84,15 +84,14 @@
   }
 
   .fa-solid {
+    color: #FFFFFF;
     -webkit-text-stroke-width: 2px;
   
   -webkit-text-stroke-color: black;
     
   }
 
-  .fa-solid :hover {
-    color: #9356DC;
-  }
+ 
 
   .coeur1{
     color: white;
