--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -75,7 +75,7 @@
 
   .fa-heart, .empty {
     position: absolute;
-    top: 10%;
+    top: 30%;
     left: 80%;
     color: #FFFFFF;
     -webkit-text-stroke-width: 1px;
@@ -84,13 +84,19 @@
   }
 
   
-   .coeur1 :hover{
+   .coeur1 :hover {
    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;
    -webkit-text-stroke-color:transparent;
+   transition-property: all;
+   transition-duration: 2s;
+   animation-direction: normal;
+   animation-name: content: '\f004';;
+ 
+   
   
 }
 
