--- a/Sass/main.css
+++ b/Sass/main.css
@@ -503,7 +503,7 @@ abbr {
 
 .fa-heart, .empty {
   position: absolute;
-  top: 10%;
+  top: 30%;
   left: 80%;
   color: #FFFFFF;
   -webkit-text-stroke-width: 1px;
@@ -518,6 +518,9 @@ abbr {
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
   -webkit-text-stroke-color: transparent;
+  transition-property: all;
+  transition-duration: 2s;
+  animation-direction: normal;
 }
 
 .fa-left-long {
