--- a/Sass/main.css
+++ b/Sass/main.css
@@ -438,6 +438,7 @@ button :hover {
   opacity: 0.8;
   -moz-opacity: 1;
   -khtml-opacity: 1;
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.2509803922);
 }
 
 .searchbutton a {
