--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -107,32 +107,41 @@
     font-size: 12px;
   }
 
-  .fa-check{
+  .fa-check-circle{
    
-    width: 10px;
-    height: 10px;
-    top: 24.97px;
-    left: 650px;
-    padding: 5px;
-    color:rgba(153, 226, 208, 1);
-    background-color: #FFFFFF;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+    
+   padding-bottom: 0;
+   padding: 20px;
+    background-color:rgba(153, 226, 208, 1) ;
+    color:#FFFFFF;
+    
     display: flex;
     justify-content: center;
     text-align:center;
-    margin-left: 12px;
+    
     z-index: 1;
+    opacity: 0;
+    
+    position: absolute;
+      width: 2px;
+     height: 20px;
+      top: 1px;
+      left: 92%;
+      border-top-right-radius: 25%;
+      border-bottom-right-radius: 25%;
+      
+      
    
     
 }
 
-  .visible {
+  .fa-check :hover {
+    opacity: 1;
+    background-color:rgba(153, 226, 208, 1) ;
     
-  }
+    
+    
+}
  
   
   
