--- a/Sass/main.css
+++ b/Sass/main.css
@@ -344,6 +344,7 @@ b {
   padding-right: 10px;
   padding-left: 10px;
   width: 100%;
+  height: 30px;
 }
 
 .titre_menus {
@@ -452,15 +453,14 @@ button :hover {
 }
 
 .div-vert {
-  background-color: rgb(153, 226, 208);
-  position: absolute;
-  width: 60px;
-  height: 70px;
-  top: 1px;
-  left: 92%;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
   border: none;
+  background-color: transparent;
+}
+
+.div-vert :hover {
+  opacity: 1;
+  width: 10%;
+  transition-property: all;
 }
 
 .fa-location-dot {
@@ -565,24 +565,28 @@ abbr {
   font-size: 12px;
 }
 
-.fa-check {
-  width: 10px;
-  height: 10px;
-  top: 24.97px;
-  left: 650px;
-  padding: 5px;
-  color: rgb(153, 226, 208);
-  background-color: #FFFFFF;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
+.fa-check-circle {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color: rgb(153, 226, 208);
+  color: #FFFFFF;
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-left: 12px;
   z-index: 1;
+  opacity: 0;
+  position: absolute;
+  width: 2px;
+  height: 20px;
+  top: 1px;
+  left: 92%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+}
+
+.fa-check :hover {
+  opacity: 1;
+  background-color: rgb(153, 226, 208);
 }
 
 input {
