--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -30,7 +30,7 @@
 
   .main-container {
     width: 100%;
-    max-width: 768.98px;   
+    
     box-sizing: border-box;
   }
   
@@ -45,6 +45,7 @@
     color: black;
     text-decoration: none;
    
+   
   }
 
   .lapalette {
@@ -53,8 +54,9 @@
 
 .logopages {
   display: flex;
-  justify-content: center;
+  justify-content:flex-start;
   align-items: center;
+  width: 90%;
 }
  
   
