--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -75,8 +75,8 @@
 
   .fa-heart, .empty {
     position: absolute;
-    top: 30%;
-    left: 80%;
+    top: 45%;
+    left: 85%;
     color: #FFFFFF;
     -webkit-text-stroke-width: 0.8px;
     -webkit-text-stroke-color: black;
@@ -101,62 +101,126 @@
 
   .fa-left-long {
     color: black;
+    margin-left: 20px;
+    font-size: 25px;
+    
   }
 
   .fa-utensils, .fa-handshake-simple {
     font-size: 12px;
   }
 
-  .fa-check-circle{
-   
-    
-   padding-bottom: 0;
-   padding: 20px;
-    background-color:rgba(153, 226, 208, 1) ;
+  .fa-check-circle {
+    padding-bottom: 0;
+    padding: 20px;
+    background-color:transparent ;
     color:#FFFFFF;
-    
     display: flex;
     justify-content: center;
     text-align:center;
-    
     z-index: 1;
-    opacity: 0;
-    
+    opacity: 1;
     position: absolute;
-      width: 2px;
-     height: 20px;
-      top: 1px;
-      left: 78%;
-      border-top-right-radius: 25%;
-      border-bottom-right-radius: 25%;
-      
-      
-      
-   
+    width: 15px;
+    height: 20px;
+    top: 1px;
+    left: 1%;
+    border-top-right-radius: 25%;
+    border-bottom-right-radius: 25%;
     
 }
 
-  .fa-check :hover {
-    opacity: 1;
-    background-color:rgba(153, 226, 208, 1) ;
-   
-    
-   
-      
-}
- 
-.fa-handshake-simple {
-  transform: rotate(-30deg);
-  -webkit-transform: rotate(-30deg);
-  -moz-transform: rotate(-30deg);
-  -ms-transform: rotate(-30deg);
-  -o-transform: rotate(-30deg);
+.double {    
+  padding-bottom: 0;
+  padding: 20px;
+  background-color:transparent ;
+  color:#FFFFFF;
   display: flex;
   justify-content: center;
-  padding-top: 5px;
+  text-align:center;
+  z-index: 1;
+  opacity: 1;   
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  top: 1px;
+  left: 1%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+   
+}
+
+.div-vert {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color:white ;
+  color:#FFFFFF;
+  display: flex;
+  justify-content: center;
+  text-align:center;
+  z-index: 1;
+  opacity: 1;
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  top: 1px;
+  left: 88%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  padding-right: 20px;
+  border: none; 
+}
+
+.div-vert2 {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color:rgba(153, 226, 208, 1);
+  color:#FFFFFF; 
+  justify-content: center;
+  text-align:center;   
+  z-index: 1;
+  opacity: 0;   
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  bottom: 1px;
+  left: 86%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  padding-right: 20px;
+  border: none;
+}
+
+.div-vert :hover {
+  background-color:transparent ;
+}
+
+
+.div-vert2 :hover{
+ opacity: 1;
  
+}
+
+.fa-check :hover {
+opacity: 1;
+transform: scale(2);
+-webkit-transform: scale(2);
+-moz-transform: scale(2);
+-ms-transform: scale(2);
+-o-transform: scale(2);
+}
+    
+
  
- 
+.fa-handshake-simple {
+transform: rotate(-30deg);
+-webkit-transform: rotate(-30deg);
+-moz-transform: rotate(-30deg);
+-ms-transform: rotate(-30deg);
+-o-transform: rotate(-30deg);
+display: flex;
+justify-content: center;
+padding-top: 5px; 
 }
   
   
