--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -21,6 +21,7 @@ body {
     width: 100%;
     max-width: 320px;
     box-sizing: border-box;
+    height: 1600px;
   }
 
   .explorer{
@@ -43,7 +44,7 @@ body {
   .menus {
     background-color: #F2F4F4;
     padding-left: 10px;
-    padding-right: 10px;
+    
     padding-top: 30px;
     padding-bottom: 50px;
   }
@@ -64,8 +65,14 @@ body {
     -ms-border-radius: 20px 20px 0px 0px;
     -o-border-radius: 20px 20px 0px 0px;
     object-fit: cover;
+    
   }
 
+  .img-restaurant {
+    width: 100%;
+    object-fit:cover;
+  }
+  
   
   .image-txt {
       position: absolute;
@@ -83,6 +90,10 @@ body {
       text-align: center;
       background: rgba(153, 226, 208, 1);
       padding: 5px 10px;
+  }
+
+  .carte {
+    width: 98%;
   }
   
   .cartes {
@@ -105,7 +116,8 @@ body {
     font-weight: 700;
     line-height: 21px;
     letter-spacing: 0em;
-    text-align: left;    
+    text-align: left; 
+     
   }
 
   .carte-subtitle {
@@ -145,13 +157,16 @@ body {
     -moz-border-radius:25px 25px 0px 0px ;
     -ms-border-radius:25px 25px 0px 0px ;
     -o-border-radius:25px 25px 0px 0px ;
-    padding-top: 20px;
-   padding-bottom: 30px;
+    padding-left: 30px;
     position: relative;
-    width: 100%;
+    width:97%;
     bottom: 30px;    
     z-index: 1;
-     
+    height: 1300px;
+    margin: 0;
+    left: -5px;
+    top: -70px;
+   
   }
 
   .lapalette, .enchantee {
@@ -166,9 +181,11 @@ body {
 
   .titre_lacarte_coeur {
     position: relative;
-    padding-left: 10px;
+  
+    width: 95%;
   }
 
+  
   .titre_lacarte {
     font-family: "Shrikhand";
     font-size: 22px;
@@ -179,14 +196,15 @@ body {
     text-align: left;
     padding-top: 10px;
     position: relative;
-    padding: 10px;    
+    padding-right: 0; 
+    width: 100%;
+    padding-top: 20px;
+     
   }
 
   .entrees, .plats, .desserts {
     padding-bottom: 10px;
-    padding-left: 10px;
-    
-    width: 76%;
+    width: 100px;
   }
 
   .subtitle_lacarte {
@@ -197,7 +215,7 @@ body {
     letter-spacing: 0em;
     text-align: left;
     border-bottom: 3px solid rgba(153, 226, 208, 1);
-    width: 10%;
+    width: 40%;
     height: 23px;
     padding-top: 10px; 
      
@@ -212,30 +230,66 @@ body {
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     margin: 0;
-    gap: 15px;
-    margin-bottom: 20px;
     padding: 15px;
     position: relative;
-    padding-right: 10px;
     padding-left: 10px;
-    width: 115%;
+    width: 260px;
     height: 30px;
-    display: flex;
-  }
+    left: -10px;
+    bottom: 55px;
+    opacity: 0;   
+}
 
- .menu :hover{
-  width: 100px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  
- 
- 
+.menu2 {
+  border: 2px;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 20px ;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  margin: 0;
+  padding: 15px;
+  position: relative;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 260px;
+  height: 30px;
+  opacity: 1;
+  left: -10px; 
+}
+
+.menu2 :hover{
+ opacity: 1;
+}
+
+.menu :hover {
+  opacity: 1;
+}
+
+.menu :active{
+  transform: scale(0.5, -1);
+  -webkit-transform: scale(0.5, -1);
+  -moz-transform: scale(0.5, -1);
+  -ms-transform: scale(0.5, -1);
+  -o-transform: scale(0.5, -1);
 }
 
 
 
-  .titre_menus {    
+.titre_menus {    
+  font-size: 1em;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0; 
+  width: 100%;
+  margin-top: 2px;
+  display: flex;  
+}
+
+  .titre_menus2 {    
     font-size: 1em;
     font-weight: 700;
     line-height: 21px;
@@ -245,11 +299,24 @@ body {
     width: 100%;
     margin-top: 2px;
     display: flex;
-    
   }
 
 
+
   .subtitle_menus {   
+    font-size: 0.750em;
+    font-weight: 300;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    
+    
+  }
+
+  .subtitle_menus2 {   
     font-size: 0.750em;
     font-weight: 300;
     line-height: 18px;
@@ -271,12 +338,21 @@ body {
     position: relative;
     text-align: end;
     position: absolute;       
-    left: 250px;
+    left: 240px;
+    top: 35px;
+  }
+
+  .prix2 {
+    margin: 0;
+    font-weight: 700;
+    position: relative;
+    text-align: end;
+    position: absolute;       
+    left: 210px;
     top: 35px;
   }
 
  
-
  
   .euros {
     font-weight: 700;
