--- a/Sass/main.css
+++ b/Sass/main.css
@@ -29,7 +29,6 @@
 
 .main-container {
   width: 100%;
-  max-width: 768.98px;
   box-sizing: border-box;
 }
 
@@ -51,8 +50,9 @@ a {
 
 .logopages {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  width: 90%;
 }
 
 .logo_footer {
@@ -66,14 +66,19 @@ a {
   padding-left: 20px;
   color: rgb(255, 255, 255);
   margin-top: 0;
+  width: 95%;
 }
 
 footer {
   background: rgb(53, 53, 53);
   padding-top: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   font-size: 18px;
   position: relative;
+}
+
+.footer-container {
+  width: 100%;
 }
 
 .footer_restaurants {
@@ -82,8 +87,8 @@ footer {
   padding-bottom: 10px;
   font-size: 18px;
   position: relative;
-  width: 100%;
-  bottom: 27px;
+  width: 95%;
+  top: -70px;
 }
 
 .footer-title {
@@ -116,11 +121,11 @@ footer {
   display: flex;
   text-align: center;
   justify-content: center;
-  padding: 14px 0px;
+  padding: 20px 0px;
   flex-direction: column;
   align-items: center;
-  width: 50%;
-  padding-left: 79px;
+  width: 60%;
+  padding-left: 40px;
 }
 
 .sub-title {
@@ -160,6 +165,7 @@ nav {
   width: 100%;
   max-width: 320px;
   box-sizing: border-box;
+  height: 1600px;
 }
 
 .explorer {
@@ -181,7 +187,6 @@ nav {
 .menus {
   background-color: #F2F4F4;
   padding-left: 10px;
-  padding-right: 10px;
   padding-top: 30px;
   padding-bottom: 50px;
 }
@@ -205,6 +210,12 @@ nav {
      object-fit: cover;
 }
 
+.img-restaurant {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .image-txt {
   position: absolute;
   z-index: 1;
@@ -221,6 +232,10 @@ nav {
   text-align: center;
   background: rgb(153, 226, 208);
   padding: 5px 10px;
+}
+
+.carte {
+  width: 98%;
 }
 
 .cartes {
@@ -280,12 +295,15 @@ b {
   -moz-border-radius: 25px 25px 0px 0px;
   -ms-border-radius: 25px 25px 0px 0px;
   -o-border-radius: 25px 25px 0px 0px;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-left: 30px;
   position: relative;
-  width: 100%;
+  width: 97%;
   bottom: 30px;
   z-index: 1;
+  height: 1300px;
+  margin: 0;
+  left: -5px;
+  top: -70px;
 }
 
 .lapalette, .enchantee {
@@ -299,7 +317,7 @@ b {
 
 .titre_lacarte_coeur {
   position: relative;
-  padding-left: 10px;
+  width: 95%;
 }
 
 .titre_lacarte {
@@ -312,13 +330,14 @@ b {
   text-align: left;
   padding-top: 10px;
   position: relative;
-  padding: 10px;
+  padding-right: 0;
+  width: 100%;
+  padding-top: 20px;
 }
 
 .entrees, .plats, .desserts {
   padding-bottom: 10px;
-  padding-left: 10px;
-  width: 76%;
+  width: 100px;
 }
 
 .subtitle_lacarte {
@@ -329,7 +348,7 @@ b {
   letter-spacing: 0em;
   text-align: left;
   border-bottom: 3px solid rgb(153, 226, 208);
-  width: 10%;
+  width: 40%;
   height: 23px;
   padding-top: 10px;
 }
@@ -343,24 +362,64 @@ b {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   margin: 0;
-  gap: 15px;
-  margin-bottom: 20px;
+  padding: 15px;
+  position: relative;
+  padding-left: 10px;
+  width: 260px;
+  height: 30px;
+  left: -10px;
+  bottom: 55px;
+  opacity: 0;
+}
+
+.menu2 {
+  border: 2px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  margin: 0;
   padding: 15px;
   position: relative;
   padding-right: 10px;
   padding-left: 10px;
-  width: 115%;
+  width: 260px;
   height: 30px;
-  display: flex;
+  opacity: 1;
+  left: -10px;
+}
+
+.menu2 :hover {
+  opacity: 1;
 }
 
 .menu :hover {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  opacity: 1;
+}
+
+.menu :active {
+  transform: scale(0.5, -1);
+  -webkit-transform: scale(0.5, -1);
+  -moz-transform: scale(0.5, -1);
+  -ms-transform: scale(0.5, -1);
+  -o-transform: scale(0.5, -1);
 }
 
 .titre_menus {
+  font-size: 1em;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0;
+  width: 100%;
+  margin-top: 2px;
+  display: flex;
+}
+
+.titre_menus2 {
   font-size: 1em;
   font-weight: 700;
   line-height: 21px;
@@ -383,13 +442,34 @@ b {
   display: flex;
 }
 
+.subtitle_menus2 {
+  font-size: 0.75em;
+  font-weight: 300;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0;
+  width: 100%;
+  display: flex;
+}
+
 .prix {
   margin: 0;
   font-weight: 700;
   position: relative;
   text-align: end;
   position: absolute;
-  left: 250px;
+  left: 240px;
+  top: 35px;
+}
+
+.prix2 {
+  margin: 0;
+  font-weight: 700;
+  position: relative;
+  text-align: end;
+  position: absolute;
+  left: 210px;
   top: 35px;
 }
 
@@ -451,7 +531,7 @@ b {
   border: none;
 }
 
-button :hover {
+.searchbutton :hover {
   transition: 1s;
   -moz-transition: 1s;
   -o-transition: 1s;
@@ -465,17 +545,6 @@ button :hover {
 
 .searchbutton a {
   color: #fff;
-}
-
-.div-vert {
-  border: none;
-  background-color: transparent;
-}
-
-.div-vert :hover {
-  opacity: 1;
-  width: 10%;
-  transition-property: all;
 }
 
 .fa-location-dot {
@@ -552,8 +621,8 @@ abbr {
 
 .fa-heart, .empty {
   position: absolute;
-  top: 30%;
-  left: 80%;
+  top: 45%;
+  left: 85%;
   color: #FFFFFF;
   -webkit-text-stroke-width: 0.8px;
   -webkit-text-stroke-color: black;
@@ -574,6 +643,8 @@ abbr {
 
 .fa-left-long {
   color: black;
+  margin-left: 20px;
+  font-size: 25px;
 }
 
 .fa-utensils, .fa-handshake-simple {
@@ -583,25 +654,97 @@ abbr {
 .fa-check-circle {
   padding-bottom: 0;
   padding: 20px;
-  background-color: rgb(153, 226, 208);
+  background-color: transparent;
   color: #FFFFFF;
   display: flex;
   justify-content: center;
   text-align: center;
   z-index: 1;
-  opacity: 0;
+  opacity: 1;
   position: absolute;
-  width: 2px;
+  width: 15px;
   height: 20px;
   top: 1px;
-  left: 78%;
+  left: 1%;
   border-top-right-radius: 25%;
   border-bottom-right-radius: 25%;
 }
 
+.double {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color: transparent;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  z-index: 1;
+  opacity: 1;
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  top: 1px;
+  left: 1%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+}
+
+.div-vert {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color: white;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  z-index: 1;
+  opacity: 1;
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  top: 1px;
+  left: 88%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  padding-right: 20px;
+  border: none;
+}
+
+.div-vert2 {
+  padding-bottom: 0;
+  padding: 20px;
+  background-color: rgb(153, 226, 208);
+  color: #FFFFFF;
+  justify-content: center;
+  text-align: center;
+  z-index: 1;
+  opacity: 0;
+  position: absolute;
+  width: 15px;
+  height: 20px;
+  bottom: 1px;
+  left: 86%;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  padding-right: 20px;
+  border: none;
+}
+
+.div-vert :hover {
+  background-color: transparent;
+}
+
+.div-vert2 :hover {
+  opacity: 1;
+}
+
 .fa-check :hover {
   opacity: 1;
-  background-color: rgb(153, 226, 208);
+  transform: scale(2);
+  -webkit-transform: scale(2);
+  -moz-transform: scale(2);
+  -ms-transform: scale(2);
+  -o-transform: scale(2);
 }
 
 .fa-handshake-simple {
